# efimux

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: app.rs  focused_block.rs  main.rs
